# streamlit-operator

./: .gitignore  .pre-commit-config.yaml  .yamlfmt.yaml  .yamllint.yaml  Makefile  README.md  example-streamlit-app.yaml  pyproject.toml
charts/streamlit-operator/: Chart.yaml  README.md  values.yaml
charts/streamlit-operator/templates/: _helpers.tpl  crd.yaml  launch-script-configmap.yaml  namespace.yaml  operator-configmap.yaml  operator-deployment.yaml  role.yaml  secrets.yaml
demo-app/: demo-app.yaml
streamlit-hub/: main.py  requirements.txt  stapp_client.py
streamlit-operator/: main.py  requirements.txt  start.sh  streamlit_app_manifest_templating.py  streamlit_app_spec_schema.py  streamlit_operator_config.py
